Fix Alert alignment

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -945,7 +945,8 @@ label {
   width: 80%;
   text-align: center;
   background: #fff;
-  padding-top: 50px;
+  padding: 10px 5px;
   border-radius: 10px;
   max-width: 300px;
+  box-shadow: 1px 3px 3px #888888;
 }
